--- a/.drone.yml
+++ b/.drone.yml
@@ -17,9 +17,9 @@ steps:
     image: debian:bookworm
     commands:
       - ln -snf /etc/localtime && echo CET > /etc/timezone
-      - ./src/hst_autocompile.sh --dontinstalldeps --hestia --debug --cross --noinstall --keepbuild '~localsrc'
-      - mkdir -p ./hestia/
-      - mv /tmp/hestiacp-src/deb/*.deb ./hestia/
+      - ./src/hst_autocompile.sh --dontinstalldeps --tuliocp --debug --cross --noinstall --keepbuild '~localsrc'
+      - mkdir -p ./tuliocp/
+      - mv /tmp/tuliocp-src/deb/*.deb ./tuliocp/
 
 trigger:
   event: [push]
@@ -43,9 +43,9 @@ steps:
     image: debian:bookworm
     commands:
       - ln -snf /etc/localtime && echo CET > /etc/timezone
-      - ./src/hst_autocompile.sh --dontinstalldeps --hestia --debug --cross --noinstall --keepbuild '~localsrc'
-      - mkdir -p ./hestia/
-      - mv /tmp/hestiacp-src/deb/*.deb ./hestia/
+      - ./src/hst_autocompile.sh --dontinstalldeps --tuliocp --debug --cross --noinstall --keepbuild '~localsrc'
+      - mkdir -p ./tuliocp/
+      - mv /tmp/tuliocp-src/deb/*.deb ./tuliocp/
   - name: Upload
     image: appleboy/drone-scp
     settings:
@@ -58,7 +58,7 @@ steps:
       command_timeout: 2m
       target: /root/
       source:
-        - ./hestia/*
+        - ./tuliocp/*
 
 trigger:
   event: [promote]
