--- a/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Is there a feature or change that you think would make Hestia Control Panel work better for you? Send us your ideas and our development team will take them into consideration.
+        Is there a feature or change that you think would make Tulio Control Panel work better for you? Send us your ideas and our development team will take them into consideration.
         Before submitting a new idea, look at the **[current feature requests list](https://github.com/contaura/tuliocp/labels/feature)** to see if it has already been requested.
   - type: textarea
     id: request
