--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,4 @@ blank_issues_enabled: false
 contact_links:
   - name: Support Question
     url: https://forum.tuliocp.com
-    about: We use GitHub issues only to discuss about HestiaCP bugs and new features.
+    about: We use GitHub issues only to discuss about TulioCP bugs and new features.
