--- a/src/deb/php/control
+++ b/src/deb/php/control
@@ -12,4 +12,4 @@ Description: hestia php-fpm
  hestia is an open source hosting control panel.
  hestia has a clean and focused interface without the clutter.
  hestia has the latest of very innovative technologies.
- hestia is a fork from VestaCP, special thanks to vestacp.com and Serghey Rodin
+ hestia is an open source hosting control panel with innovative technologies.
