--- a/src/deb/web-terminal/control
+++ b/src/deb/web-terminal/control
@@ -11,4 +11,4 @@ Description: hestia web terminal
  hestia is an open source hosting control panel.
  hestia has a clean and focused interface without the clutter.
  hestia has the latest of very innovative technologies.
- hestia is a fork from VestaCP, special thanks to vestacp.com and Serghey Rodin
+ hestia is an open source hosting control panel with innovative technologies.
