--- a/src/deb/web-terminal/control
+++ b/src/deb/web-terminal/control
@@ -6,9 +6,9 @@ Section: admin
 Maintainer: TulioCP <info@tuliocp.com>
 Homepage: https://www.tuliocp.com
 Architecture: amd64
-Depends: hestia, nodejs (>= 20.0.0)
-Description: hestia web terminal
- hestia is an open source hosting control panel.
- hestia has a clean and focused interface without the clutter.
- hestia has the latest of very innovative technologies.
- hestia is an open source hosting control panel with innovative technologies.
+Depends: tuliocp, nodejs (>= 20.0.0)
+Description: TulioCP Web Terminal
+ Browser-based terminal interface for TulioCP control panel.
+ Provides secure SSH access through web browser with xterm.js.
+ Enables server administration without separate SSH client.
+ Modern web terminal with full terminal emulation support.
