--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -3,19 +3,22 @@ name: Deploy GitHub Pages
 on:
   push:
     branches: [ main ]
-    paths: [ 'docs/**' ]
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
+  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -24,6 +27,38 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
+      - name: Create APT repository structure
+        run: |
+          # Create basic APT repo structure
+          mkdir -p apt-repo/dists/stable/main/binary-amd64
+          mkdir -p apt-repo/pool/main
+          
+          # Copy our index page to the root
+          cp docs/index.html apt-repo/
+          
+          # Create minimal Packages file (empty for now)
+          touch apt-repo/dists/stable/main/binary-amd64/Packages
+          gzip -c apt-repo/dists/stable/main/binary-amd64/Packages > apt-repo/dists/stable/main/binary-amd64/Packages.gz
+          
+          # Create Release file
+          cat > apt-repo/dists/stable/Release << EOF
+          Origin: TulioCP
+          Label: TulioCP APT Repository
+          Suite: stable
+          Codename: stable
+          Components: main
+          Architectures: amd64
+          Date: $(date -u +"%a, %d %b %Y %H:%M:%S %Z")
+          Description: TulioCP Control Panel packages
+          EOF
+          
+          # Create CNAME file for custom domain
+          echo "apt.tuliocp.com" > apt-repo/CNAME
+          
+          # List what we created
+          echo "Created repository structure:"
+          find apt-repo -type f
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -31,7 +66,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './docs'
+          path: './apt-repo'
           
       - name: Deploy to GitHub Pages
         id: deployment
