--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -9,34 +9,19 @@ on:
 
 jobs:
   build-packages:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Set up build environment
+    - name: Verify build environment
       run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          build-essential \
-          libssl-dev \
-          zlib1g-dev \
-          libpcre3-dev \
-          libxml2-dev \
-          libxslt1-dev \
-          libgd-dev \
-          libgeoip-dev \
-          libzip-dev \
-          dpkg-dev \
-          wget \
-          curl \
-          lsb-release
-
-    - name: Install Node.js 20
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
+        echo "✅ Using self-hosted runner with pre-installed dependencies"
+        echo "Node.js version: $(node --version 2>/dev/null || echo 'Not available')"
+        echo "dpkg-deb available: $(which dpkg-deb)"
+        echo "Build tools ready: $(which gcc)"
+        echo "Working directory: $(pwd)"
     
     - name: Build TulioCP package using simple build script
       run: |
@@ -92,7 +77,7 @@ jobs:
 
   create-repository:
     needs: build-packages
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: github.ref == 'refs/heads/main'
     
     steps:
