--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -37,8 +37,9 @@ jobs:
           # Copy our index page to the root
           cp docs/index.html apt-repo/
           
-          # Copy setup.sh script to the root (so it's accessible at apt.tuliocp.com/setup.sh)
-          cp apt-repo/setup.sh apt-repo/
+          # setup.sh is already in apt-repo/ directory and will be deployed
+          # Verify setup.sh exists for deployment
+          ls -la apt-repo/setup.sh
           
           # Create minimal Packages file (empty for now)
           touch apt-repo/dists/stable/main/binary-amd64/Packages
