Fix build-packages.yml to use ubuntu-latest instead of self-hosted
- Changed from self-hosted to ubuntu-latest runners for better availability
- This ensures the workflow can run and build packages on GitHub's infrastructure
- Should fix the missing tuliocp package in the APT repository

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-packages:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
@@ -77,7 +77,7 @@ jobs:
 
   create-repository:
     needs: build-packages
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     
     steps:
