--- a/web/src/composer.json
+++ b/web/src/composer.json
@@ -1,7 +1,8 @@
 {
     "autoload": {
         "psr-4": {
-            "Hestia\\": "app/"
+            "Hestia\\": "app/",
+            "Tulio\\System\\": "app/System/"
         }
     },
     "require": {
